<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en-rUS">
    <string name="slogan">A secret so good that even the name is banned.</string>
    <string name="login">Sign In</string>
    <string name="logout">Logout</string>
    <string name="anilist_login">AniList Login for Himitsu</string>
    <string name="mal_login">MyAnimeList Login for Himitsu</string>
    <string name="discord_login">Discord Login for Himitsu</string>
    <string name="conversion_title">Welcome back!</string>
    <string name="conversion_message">It appears you have an older package installed.\nPlease select \"Backup\" to open the older version and perform a backup. You can then return to this app and use \"Restore Settings\".</string>
    <string name="backup">Backup</string>
    <string name="home">Home</string>
    <string name="anime">Anime</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="manga">Manga</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="novels">Novels</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="read">Read</string>
    <string name="language">Language</string>
    <string name="language_code" translatable="false">LANG</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_connection">No Internet Connection\nOffline mode available</string>
    <string name="refresh">Refresh</string>
    <string name="go_online">Go Online</string>
    <string name="search">Search</string>
    <string name="extension_search">Reverse Source Search</string>
    <string name="search_results">Search Results</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>New Releases</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Pure pain</item>
    </string-array>
    <string name="genre">Genre</string>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>
    <string name="username">Username</string>
    <string name="chapters_read">Chapters Read</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="continue_media">Continue…</string>
    <string name="recommended">Recommended</string>
    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string-array name="keys">
        <item>Reading</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>Paused</item>
        <item>Dropped</item>
        <item>Planning</item>
        <item>Favourites</item>
        <item>Rewatching</item>
        <item>Rereading</item>
        <item>All</item>
    </string-array>
    <string name="no_notifications">No more notifications</string>
    <string name="followers">Followers</string>
    <string name="social_in_media">Social stats in media</string>
    <string name="social_in_media_desc">Display friend ratings and progress</string>
    <string-array name="status" translatable="false">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_anime">
        <item>PLANNING</item>
        <item>WATCHING</item>
        <item>COMPLETED</item>
        <item>RE-WATCHING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="status_manga">
        <item>PLANNING</item>
        <item>READING</item>
        <item>COMPLETED</item>
        <item>RE-READING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="name">Name</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="episodes">" Episode(s)"</string>
    <string name="chapters">" Chapter(s)"</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>
    <string name="staff">Staff</string>
    <string name="favourites">Favourites</string>
    <string name="popularity">Popularity</string>
    <string name="roles">Roles</string>
    <string name="details">Details</string>
    <string name="trailer_yt">Watch Trailer on YouTube</string>
    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Couldn\'t find anything X( \n
        Try another source.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="filler">Filler</string>
    <string name="adult">Adult</string>
    <string name="list_only">List Only</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="installed">Installed</string>
    <string name="torrserver">TorrServer</string>
    <string name="torrent_running">Server is running…</string>
    <string name="settings_torrent">Internal TorrServer</string>
    <string name="enable_server">Enable TorrServer</string>
    <string name="enable_server_desc">Enables on-demand use of a local server</string>
    <string name="torrent_port">Server port number</string>
    <string name="torrents">torrents</string>
    <string name="active_torrents">Active torrents</string>
    <string name="remove_torrent">Remove this torrent?</string>
    <string name="invalid_port">Invalid port entered!</string>
    <string name="port_range">Port must be a valid TCP port (0 – 65535)</string>
    <string name="server_disabled">TorrServer in disabled!</string>
    <string name="server_enabled">Starting TorrServer</string>
    <string name="enable_server_temp">Would you like to temporarily enable TorrServer (disabled on app close)?</string>
    <string name="peer_count_low">Low peer count detected!</string>
    <string name="hidden_option">Hidden Option</string>
    <string name="anilist_settings">Anilist Settings</string>
    <string name="extension_settings">Extensions</string>
    <string name="downloads">Downloads</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="settings">Settings</string>
    <string name="extensions">Extensions</string>
    <string name="extension_updates_available">Extension updates available</string>
    <string name="player_settings">Player Settings</string>
    <string name="recentlyListOnly">Only my content in \"Recently Updated\"</string>
    <string name="download_manager_select">Download Manager</string>
    <string name="downloadInSd">Download in SD card</string>
    <string name="noSdFound">No SD card was Found.</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="default_source">Default Source</string>
    <string name="show_yt">Show Youtube Link</string>
    <string name="default_ep_view">Default Episode Layout</string>
    <string name="default_chp_view">Default Chapter Layout</string>
    <string name="ui">User Interface</string>
    <string name="common">Common</string>
    <string name="theme">Theme</string>
    <string name="day_night">Light / Dark Theme</string>
    <string name="ui_settings">UI Settings</string>
    <string name="system">System</string>
    <string name="about">About</string>
    <string name="devs">Contributors</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="empty_fav">Looks like you don\'t like anything,\nTry liking a show to keep it here.</string>
    <string name="cancel">Cancel</string>
    <string name="check_app_updates">Check for updates</string>
    <string name="forks">Versions</string>
    <string name="faq">FAQ</string>
    <string name="back_button">Back Button</string>
    <string name="type_summary">SUMMARY</string>
    <string name="log_to_file">Log to File</string>
    <string name="logging_warning">May cause lag. Only enable when necessary.</string>
    <string name="placeholder">Placeholder</string>
    <string name="media">Media</string>
    <string name="social">Social</string>
    <string name="all">All</string>
    <string name="activity">Activity</string>
    <string name="threads">Threads</string>
    <string name="create">Create</string>
    <string name="preview">Preview</string>
</resources>