<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/markdownCreatorToolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/markdownCreatorBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/ic_round_arrow_back_ios_new_24"
            app:tint="?attr/colorPrimary" />

        <TextView
            android:id="@+id/markdownCreatorTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="44dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center|start"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            tools:text="@string/placeholder" />

        <CheckBox
            android:id="@+id/markdownCreatorPreviewCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/preview"
            android:text="@string/preview"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:textColor="?attr/colorOnBackground"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/markdownCreatorToolbar"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/summaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:visibility="gone"
        android:text="@string/type_summary"
        android:textColor="?attr/colorOnBackground"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toStartOf="@+id/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/scoreText"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:inputType="textMultiLine"
        android:visibility="gone"
        android:padding="16dp"
        android:text="10.0"
        android:textColor="?attr/colorOnBackground"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/summaryText"
        tools:ignore="HardcodedText,LabelFor"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:text="@string/cancel"
            app:cornerRadius="16dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:text="@string/create"
            app:cornerRadius="16dp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>