<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settingsAboutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="31dp"
        android:paddingEnd="31dp">

        <TextView
            android:id="@+id/settingsAboutTitle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:paddingEnd="28dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_round_arrow_back_ios_new_24"
            app:drawableTint="?attr/colorOnBackground"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="-16dp"
            android:layout_marginEnd="-16dp"
            android:background="?android:attr/listDivider" />

        <!-- beginning of layout contents -->

        <Button
            android:id="@+id/settingsFAQ"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="-31dp"
            android:layout_marginEnd="-31dp"
            android:background="@drawable/ui_bg"
            android:backgroundTint="?attr/colorOnBackground"
            android:backgroundTintMode="src_atop"
            android:fontFamily="@font/poppins_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="31dp"
            android:paddingEnd="31dp"
            android:text="@string/faq"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_round_help_24"
            app:iconPadding="16dp"
            app:iconSize="24dp"
            app:iconTint="?attr/colorPrimary" />
        <Button
            android:id="@+id/settingsDev"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="-31dp"
            android:layout_marginEnd="-31dp"
            android:fontFamily="@font/poppins_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="31dp"
            android:paddingEnd="31dp"
            android:text="@string/devs"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_round_accessible_forward_24"
            app:iconPadding="16dp"
            app:iconSize="24dp" />

        <Button
            android:id="@+id/settingsForks"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="-31dp"
            android:layout_marginEnd="-31dp"
            android:fontFamily="@font/poppins_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="31dp"
            android:paddingEnd="31dp"
            android:text="@string/forks"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_round_restaurant_24"
            app:iconPadding="16dp"
            app:iconSize="24dp" />

        <Button
            android:id="@+id/settingsDisclaimer"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="-31dp"
            android:layout_marginEnd="-31dp"
            android:fontFamily="@font/poppins_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="31dp"
            android:paddingEnd="31dp"
            android:text="@string/disclaimer"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_round_info_24"
            app:iconPadding="16dp"
            app:iconSize="24dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>