<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ani.dantotsu.others.Xpandable
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:isExpanded="false"
        tools:isExpanded="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_vertical"
            android:text="@string/system"
            android:textColor="?attr/colorSecondary"
            app:drawableEndCompat="@drawable/ic_round_arrow_drop_down_24"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="-16dp"
            android:layout_marginEnd="-16dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/settingsCheckUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableStart="@drawable/ic_round_new_releases_24"
            android:drawablePadding="16dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_bold"
            android:minHeight="64dp"
            android:text="@string/check_app_updates"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:drawableTint="?attr/colorPrimary"
            app:showText="false"
            app:thumbTint="@color/button_switch_track" />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/settingsShareUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:drawableStart="@drawable/ic_round_search_24"
            android:drawablePadding="16dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_bold"
            android:minHeight="64dp"
            android:text="@string/share_username_in_crash_reports"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:drawableTint="?attr/colorPrimary"
            app:showText="false"
            app:thumbTint="@color/button_switch_track" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/settingsLogToFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:drawableStart="@drawable/ic_round_edit_note_24"
            android:drawablePadding="16dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_bold"
            android:minHeight="64dp"
            android:text="@string/log_to_file"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="0dp"
            app:drawableTint="?attr/colorPrimary"
            app:showText="false"
            app:thumbTint="@color/button_switch_track" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.58"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/logging_warning" />

            <ImageButton
                android:id="@+id/settingsShareLog"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_round_share_24"
                android:padding="16dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="-16dp"
            android:layout_marginEnd="-16dp"
            android:layout_marginVertical="16dp"
            android:background="?android:attr/listDivider" />
    </ani.dantotsu.others.Xpandable>
</merge>